--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,10 @@ cache:
     - $MYSQL_ROOT
     # Cache bootstrapped dependencies (e.g. protobuf and gRPC).
     - $HOME/gopath/dist/grpc/.build_finished
-    - $HOME/gopath/dist/grpc/usr/local
+    - $HOME/gopath/dist/grpc/usr/local/bin/grpc_python_plugin
+    - $HOME/gopath/dist/grpc/usr/local/bin/protoc
+    - $HOME/gopath/dist/grpc/usr/local/include/google/protobuf/descriptor.proto
+    - $HOME/gopath/dist/grpc/usr/local/lib
     - $HOME/gopath/dist/py-mock-1.0.1/.build_finished
     - $HOME/gopath/dist/py-mock-1.0.1/lib/python2.7/site-packages
     - $HOME/gopath/dist/py-vt-bson-0.3.2/lib/python2.7/site-packages
@@ -63,6 +66,9 @@ before_cache:
   - rm $HOME/.phpenv/shims/php-cgi
   - find $HOME/.phpenv/vendor/grpc/grpc -mindepth 1 -maxdepth 1 ! -name src | xargs rm -rf
   - find $HOME/.phpenv/vendor/grpc/grpc/src -mindepth 1 -maxdepth 1 ! -name php | xargs rm -rf
+  # Don't cache unnecessary big gRPC files.
+  - rm $HOME/gopath/dist/grpc/usr/local/lib/libprotoc.a
+  - rm $HOME/gopath/dist/grpc/usr/local/lib/libprotobuf.a
 env:
   global:
     - MYSQL_FLAVOR=MariaDB
