--- a/docker/bootstrap/Dockerfile.common
+++ b/docker/bootstrap/Dockerfile.common
@@ -1,5 +1,8 @@
 FROM golang:1.5
 
+# Use all cores for parallel make (load bound to number of cores as well).
+ENV MAKEFLAGS -j$(nproc) -l$(nproc)
+
 # Install Vitess build dependencies
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     automake \
